<resources>
    <string name="app_name">ChitChat</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>

    <string name="facebook_app_id" translatable="false">122948953084635</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb122948953084635</string>


    <string name="Correo">Mail</string>
    <string name="Contraseña">Password</string>
    <string name="Login">Log in</string>
    <string name="Registrarse">Log up</string>
    <string name="UserName">User name</string>
    <string name="RepiteContraseña">Confirm password</string>

    <string name="google">Google</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>

    <!-- Strings Ainhoa Settings -->

    <string name="settings_title_Profile">Profile</string>
    <string name="settings_Profile_Info">Hey, I´m using chitchat</string>
    <string name="RecuperarContraseña">Forgot password?</string>


</resources>