<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/Correo_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias=".3"
        app:layout_constraintHorizontal_bias=".5"
        android:hint="@string/Correo"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Password_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Contraseña"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/Correo_edittext"
        app:layout_constraintWidth_percent=".8" />


    <TextView
        android:id="@+id/RecuperarContraseña_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RecuperarContraseña"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="1"
        android:paddingTop="5dp"
        android:layout_marginRight="5dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Password_edittext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password_edittext" />


    <Button
        android:id="@+id/Login_boton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/botoneslogin"
        app:layout_constraintVertical_bias="1"
        android:text="@string/Login"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Password_edittext"
        app:layout_constraintStart_toStartOf="@+id/Password_edittext"
        app:layout_constraintTop_toBottomOf="@+id/Password_edittext" />




</androidx.constraintlayout.widget.ConstraintLayout>